Add new features and update docs
Se agrego nuevas funcionalidades, actualizacion de la documentacion para las nuevas funcionalidades.

- Endpoint para cancelar un intercambio antes de que sea aceptado o rechazado
- Se cambio como se eliminan los intercambios que ya fueron aceptados o rechazados
- Se documento todo lo anterior
