# back/controllers/exchangeController.js
@@ -3,7 +3,7 @@ const exchangeService = require('../services/exchangeService.js')
 const getAllExchangeRequestUserFrom = async (req, res) => {
   try {
     const userIdFrom = req.user.id
-    const exchangeRequest = await exchangeService.getAllExchangeRequestUserFrom(userIdFrom)
+    const exchangeRequest = await exchangeService.getAllExchangeRequestUserFromPending(userIdFrom)
 
     if (exchangeRequest.error == "The user is not the owner of the request") {
       return res.status(403).json(exchangeRequest)
@@ -13,6 +13,58 @@ const getAllExchangeRequestUserFrom = async (req, res) => {
   } catch (error) {
     console.error(error)
     res.status(500).json({ message: 'Error when getting all exchange request' })
+  }
+}
+
+const getAllRequestUserFromNotPending = async (req, res) => {
+  try {
+    const userIdFrom = req.user.id
+    const filters = {}
+
+    if (req.query.usernameUserTo) {
+      filters.usernameUserTo = req.query.usernameUserTo
+    }
+
+    if (req.query.startDate && req.query.endDate) {
+      filters.startDate = new Date(req.query.startDate)
+      filters.endDate = new Date(req.query.endDate)
+    }
+    const exchangeRequest = await exchangeService.getAllRequestUserFromNotPending(userIdFrom, filters)
+
+    if (exchangeRequest.error == "The user is not the owner of the request") {
+      return res.status(403).json(exchangeRequest)
+    }
+
+    return res.status(200).json(exchangeRequest)
+  } catch (error) {
+    console.error(error)
+    res.status(500).json({ message: 'Error when getting all exchange request' })
+  }
+}
+
+const cancelExchangeRequestUserFrom = async (req, res) => {
+  try {
+    const exchangeId = req.params.exchangeRequestId
+    const userIdFrom = req.user.id
+    const exchangeRequest = await exchangeService.cancelExchangeRequestUserFrom(exchangeId, userIdFrom)
+
+    if (exchangeRequest.error == "Only pending requests can be modified") {
+      return res.status(400).json(exchangeRequest)
+    }
+
+    if (exchangeRequest.error == "The user is not the owner of the request") {
+      return res.status(403).json(exchangeRequest)
+    }
+
+    if (exchangeRequest.error == "Exchange request not found") {
+      return res.status(404).json(exchangeRequest)
+    }
+
+    res.status(200).json(exchangeRequest)
+
+  } catch (error) {
+    console.error(error)
+    res.status(500).json({ message: 'Error when canceling exchange request' })
   }
 }
 
@@ -40,7 +92,34 @@ const deleteAllExchangeRequestUserFrom = async (req, res) => {
 const getAllExchangeRequestUserTo = async (req, res) => {
   try {
     const userIdTo = req.user.id
-    const exchangeRequest = await exchangeService.getAllExchangeRequestUserTo(userIdTo)
+    const exchangeRequest = await exchangeService.getAllExchangeRequestUserToPending(userIdTo)
+
+    if (exchangeRequest.error == "The user is not the owner of the request") {
+      return res.status(403).json(exchangeRequest)
+    }
+
+    res.status(200).json(exchangeRequest)
+  } catch (error) {
+    console.error(error)
+    res.status(500).json({ message: 'Error when getting all exchange request' })
+  }
+}
+
+const getAllExchangeRequestUserToNotPending = async (req, res) => {
+  try {
+    const userIdTo = req.user.id
+    const filters = {}
+
+    if (req.query.usernameUserFrom) {
+      filters.usernameUserFrom = req.query.usernameUserFrom
+    }
+
+    if (req.query.startDate && req.query.endDate) {
+      filters.startDate = new Date(req.query.startDate)
+      filters.endDate = new Date(req.query.endDate)
+    }
+
+    const exchangeRequest = await exchangeService.getAllExchangeRequestUserToNotPending(userIdTo, filters)
 
     if (exchangeRequest.error == "The user is not the owner of the request") {
       return res.status(403).json(exchangeRequest)
@@ -122,6 +201,10 @@ const acceptExchange = async (req, res) => {
       return res.status(404).json(exchangeRequest)
     }
 
+    if (exchangeRequest.error == "The user can only exchange books with the origin user") {
+      return res.status(400).json(exchangeRequest)
+    }
+
     if (exchangeRequest.error == "Required book to exchange") {
       return res.status(400).json(exchangeRequest)
     }
@@ -160,8 +243,11 @@ const rejectExchange = async (req, res) => {
 
 module.exports = {
   getAllExchangeRequestUserFrom,
+  getAllRequestUserFromNotPending,
+  cancelExchangeRequestUserFrom,
   deleteAllExchangeRequestUserFrom,
   getAllExchangeRequestUserTo,
+  getAllExchangeRequestUserToNotPending,
   deleteAllExchangeRequestUserTo,
   requestExchange,
   acceptExchange,
